--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "style-loader": "^3.2.1",
     "typescript": "4.3.5",
     "webpack": "5.52.1",
-    "webpack-cli": "4.8.0",
+    "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.2.0"
   },
   "dependencies": {
@@ -31,14 +31,15 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "webpack-cli serve",
+    "start": "webpack-cli serve --mode=development",
     "build": "webpack --mode production",
     "serve": "serve dist -p 3002",
     "clean": "rm -rf dist",
     "startbu": "react-scripts start",
     "buildbu": "react-scripts build",
     "testbu": "react-scripts test",
-    "ejectbu": "react-scripts eject"
+    "ejectbu": "react-scripts eject",
+    "test": "jest --coverage src/**/*.test.ts*"
   },
   "eslintConfig": {
     "extends": [
