--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "babel-loader": "8.2.2",
     "bundle-loader": "0.5.6",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "5.3.2",
     "serve": "12.0.1",
     "style-loader": "^3.2.1",
-    "typescript": "4.3.5",
+    "typescript": "^4.9.0",
     "webpack": "5.52.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.2.0"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.0.0"
   },
   "scripts": {
     "start": "webpack-cli serve --mode=development",
