--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.15.5",
-    "@babel/preset-react": "7.14.5",
-    "@babel/preset-typescript": "7.15.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@testing-library/dom": "^8.19.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.5",
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "babel-loader": "8.2.2",
     "bundle-loader": "0.5.6",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "5.3.2",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "serve": "12.0.1",
     "style-loader": "^3.2.1",
+    "ts-jest": "^29.0.5",
+    "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "^4.9.0",
     "webpack": "5.52.1",
     "webpack-cli": "4.10.0",
@@ -35,7 +36,7 @@
     "build": "webpack --mode production",
     "serve": "serve dist -p 3002",
     "clean": "rm -rf dist",
-    "test": "jest --mode=development --coverage src/**/*.test.ts*"
+    "test": "jest --coverage"
   },
   "eslintConfig": {
     "extends": [
