--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,20 @@
 {
+  "baseUrl": ".",
   "compilerOptions": {
+    "baseUrl": ".",
+    "esModuleInterop": true,
     "sourceMap": true,
     "strict": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "lib": ["dom", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "paths": {
+      "*": ["*"],
+    },
+    "target": "es6"
   },
   "include": [
-    "src/**/*"
+    "src", "webpack.config.js", "setupTests.ts"
   ]
 }
