--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "serve": "12.0.1",
     "style-loader": "^3.2.1",
     "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "^4.9.0",
     "webpack": "5.52.1",
