--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "web-vitals": "^3.0.0"
   },
   "scripts": {
-    "start": "webpack-cli serve --mode=development",
+    "start": "webpack serve --mode=development",
     "build": "webpack --mode production",
     "serve": "serve dist -p 3002",
     "clean": "rm -rf dist",
